--- a/ClinicManagement/src/Core/Fnunez.VeterinaryClinic.ClinicManagement.Application/Fnunez.VeterinaryClinic.ClinicManagement.Application.csproj
+++ b/ClinicManagement/src/Core/Fnunez.VeterinaryClinic.ClinicManagement.Application/Fnunez.VeterinaryClinic.ClinicManagement.Application.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\Fnunez.VeterinaryClinic.ClinicManagement.Domain\Fnunez.VeterinaryClinic.ClinicManagement.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
