--- a/ClinicManagement/src/Core/Fnunez.VeterinaryClinic.ClinicManagement.Application/Fnunez.VeterinaryClinic.ClinicManagement.Application.csproj
+++ b/ClinicManagement/src/Core/Fnunez.VeterinaryClinic.ClinicManagement.Application/Fnunez.VeterinaryClinic.ClinicManagement.Application.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.4.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
