Add package reference Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore 7.0.0 into ClinicManagement.Infrastructure #3

--- a/ClinicManagement/src/Infrastructure/Fnunez.VeterinaryClinic.ClinicManagement.Infrastructure/Fnunez.VeterinaryClinic.ClinicManagement.Infrastructure.csproj
+++ b/ClinicManagement/src/Infrastructure/Fnunez.VeterinaryClinic.ClinicManagement.Infrastructure/Fnunez.VeterinaryClinic.ClinicManagement.Infrastructure.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\..\Core\Fnunez.VeterinaryClinic.ClinicManagement.Application\Fnunez.VeterinaryClinic.ClinicManagement.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
