--- a/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/Fnunez.VeterinaryClinic.ClinicManagement.Api.csproj
+++ b/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/Fnunez.VeterinaryClinic.ClinicManagement.Api.csproj
@@ -10,6 +10,10 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
