Add ClinicManagement.Application.SharedModel project #3

--- a/ClinicManagement/src/Core/Fnunez.VeterinaryClinic.ClinicManagement.Application/Fnunez.VeterinaryClinic.ClinicManagement.Application.csproj
+++ b/ClinicManagement/src/Core/Fnunez.VeterinaryClinic.ClinicManagement.Application/Fnunez.VeterinaryClinic.ClinicManagement.Application.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Fnunez.VeterinaryClinic.ClinicManagement.Domain\Fnunez.VeterinaryClinic.ClinicManagement.Domain.csproj" />
+    <ProjectReference Include="..\Fnunez.VeterinaryClinic.ClinicManagement.Application.SharedModel\Fnunez.VeterinaryClinic.ClinicManagement.Application.SharedModel.csproj" />
   </ItemGroup>
 
   <ItemGroup>
