Blazor web application into ClinicManagement.BlazorClient #3

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Shared/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Shared.csproj
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Shared/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Shared.csproj
@@ -9,4 +9,8 @@
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Core\Fnunez.VeterinaryClinic.ClinicManagement.Application.SharedModel\Fnunez.VeterinaryClinic.ClinicManagement.Application.SharedModel.csproj" />
+  </ItemGroup>
 </Project>
