--- a/Scheduling/src/Core/Fnunez.VeterinaryClinic.Scheduling.Application/Fnunez.VeterinaryClinic.Scheduling.Application.csproj
+++ b/Scheduling/src/Core/Fnunez.VeterinaryClinic.Scheduling.Application/Fnunez.VeterinaryClinic.Scheduling.Application.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\Fnunez.VeterinaryClinic.Scheduling.Domain\Fnunez.VeterinaryClinic.Scheduling.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
