--- a/Scheduling/src/Core/Fnunez.VeterinaryClinic.Scheduling.Application/Fnunez.VeterinaryClinic.Scheduling.Application.csproj
+++ b/Scheduling/src/Core/Fnunez.VeterinaryClinic.Scheduling.Application/Fnunez.VeterinaryClinic.Scheduling.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.4.0" />
   </ItemGroup>
 
   <PropertyGroup>
