--- a/Scheduling/src/Infrastructure/Fnunez.VeterinaryClinic.Scheduling.Infrastructure/Fnunez.VeterinaryClinic.Scheduling.Infrastructure.csproj
+++ b/Scheduling/src/Infrastructure/Fnunez.VeterinaryClinic.Scheduling.Infrastructure/Fnunez.VeterinaryClinic.Scheduling.Infrastructure.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\..\Core\Fnunez.VeterinaryClinic.Scheduling.Application\Fnunez.VeterinaryClinic.Scheduling.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
