--- a/Scheduling/src/Core/Fnunez.VeterinaryClinic.Scheduling.Application/Fnunez.VeterinaryClinic.Scheduling.Application.csproj
+++ b/Scheduling/src/Core/Fnunez.VeterinaryClinic.Scheduling.Application/Fnunez.VeterinaryClinic.Scheduling.Application.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.4.0" />
+    <PackageReference Include="Fnunez.VeterinaryClinic.SharedKernel.Application" Version="1.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
   </ItemGroup>
