Add connection strings into appsettings in Scheduling.Api #5

--- a/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/appsettings.Development.json
+++ b/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "UseInMemoryDatabase": false,
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=Scheduling;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
