Add Application.SharedModel project into Scheduling solution #5

--- a/Scheduling/src/Core/Fnunez.VeterinaryClinic.Scheduling.Application/Fnunez.VeterinaryClinic.Scheduling.Application.csproj
+++ b/Scheduling/src/Core/Fnunez.VeterinaryClinic.Scheduling.Application/Fnunez.VeterinaryClinic.Scheduling.Application.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Fnunez.VeterinaryClinic.Scheduling.Domain\Fnunez.VeterinaryClinic.Scheduling.Domain.csproj" />
+    <ProjectReference Include="..\Fnunez.VeterinaryClinic.Scheduling.Application.SharedModel\Fnunez.VeterinaryClinic.Scheduling.Application.SharedModel.csproj" />
   </ItemGroup>
 
   <ItemGroup>
