--- a/SharedKernel/src/Application/Fnunez.VeterinaryClinic.SharedKernel.Application/Fnunez.VeterinaryClinic.SharedKernel.Application.csproj
+++ b/SharedKernel/src/Application/Fnunez.VeterinaryClinic.SharedKernel.Application/Fnunez.VeterinaryClinic.SharedKernel.Application.csproj
@@ -8,7 +8,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
 </Project>
