--- a/SharedKernel/src/Infrastructure/Fnunez.VeterinaryClinic.SharedKernel.Infrastructure/Fnunez.VeterinaryClinic.SharedKernel.Infrastructure.csproj
+++ b/SharedKernel/src/Infrastructure/Fnunez.VeterinaryClinic.SharedKernel.Infrastructure/Fnunez.VeterinaryClinic.SharedKernel.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
     <ProjectReference Include="..\..\Application\Fnunez.VeterinaryClinic.SharedKernel.Application\Fnunez.VeterinaryClinic.SharedKernel.Application.csproj" />
@@ -12,6 +12,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
 </Project>
