Add package reference Scheduling.Application.SharedModel in Scheduling.BlazorClient.Shared #5

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Shared/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Shared.csproj
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Shared/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Shared.csproj
@@ -9,4 +9,8 @@
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Core\Fnunez.VeterinaryClinic.Scheduling.Application.SharedModel\Fnunez.VeterinaryClinic.Scheduling.Application.SharedModel.csproj" />
+  </ItemGroup>
 </Project>
