Add CookieSettings for UserSettingsKey in Scheduling.BlazorClient.Client #5

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/appsettings.Development.json
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/appsettings.Development.json
@@ -6,6 +6,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CookieSettings": {
+    "UserSettingsKey": "userSettings"
+  },
   "TimeZoneComponentData": {
     "TimeZones": [
       {
