Add avialable languages for LanguageComponent into appsettings json file in Scheduling.BlazorClient.Client #5

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/appsettings.Development.json
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/appsettings.Development.json
@@ -9,6 +9,20 @@
   "CookieSettings": {
     "UserSettingsKey": "userSettings"
   },
+  "LanguageComponentData": {
+    "Languages": [
+      {
+        "CultureCode": "en-US",
+        "DisplayName": "Language_English",
+        "Icon": "assets/images/flags/american_flag.png"
+      },
+      {
+        "CultureCode": "es-MX",
+        "DisplayName": "Language_Spanish",
+        "Icon": "assets/images/flags/mexican_flag.png"
+      }
+    ]
+  },
   "TimeZoneComponentData": {
     "TimeZones": [
       {
