Add dynamic blazor's client url into appsettings in ClinicManagement.Api #17

--- a/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "BlazorClientUrl": "https://localhost:7004",
   "UseInMemoryDatabase": false,
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=ClinicManagement;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True"
