Accept file specified exntesions for PAtient's photos in ClinicManagement.BlazorClient.Client #17

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/appsettings.Development.json
@@ -9,6 +9,9 @@
   "CookieSettings": {
     "UserSettingsKey": "userSettings"
   },
+  "PhotoFileSetting": {
+    "AllowedExtensions": ".apng,.avif,.bmp,.dib,.gif,.ico,.jfif,.jpg,.jpeg,.jxl,.pjp,.pjpeg,.png,.svg,.svgz,.tif,.tiff,.xbm,.webp"
+  },
   "LanguageComponentData": {
     "Languages": [
       {
