--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/appsettings.Development.json
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/appsettings.Development.json
@@ -6,7 +6,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "CookieSettings": {
+  "CookieSetting": {
     "UserSettingsKey": "userSettings"
   },
   "LanguageComponentData": {
