Add ClientStorageSetting into appsettings in Scheduling.Api #19

--- a/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/appsettings.Development.json
+++ b/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/appsettings.Development.json
@@ -4,6 +4,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=Scheduling;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True"
   },
+  "ClientStorageSetting": {
+    "BasePath": "C:\\VeterinaryClinic\\Clients"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
