--- a/ClinicManagement/src/Infrastructure/Fnunez.VeterinaryClinic.ClinicManagement.Infrastructure/Fnunez.VeterinaryClinic.ClinicManagement.Infrastructure.csproj
+++ b/ClinicManagement/src/Infrastructure/Fnunez.VeterinaryClinic.ClinicManagement.Infrastructure/Fnunez.VeterinaryClinic.ClinicManagement.Infrastructure.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Fnunez.VeterinaryClinic.SharedKernel.Infrastructure" Version="1.2.0" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.2" />
