--- a/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/appsettings.Development.json
+++ b/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/appsettings.Development.json
@@ -7,6 +7,9 @@
   "ClientStorageSetting": {
     "BasePath": "C:\\VeterinaryClinic\\Clients"
   },
+  "RabbitMqSetting": {
+    "HostAddress": "amqp://guest:guest@127.0.0.1:5672/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
