--- a/Identity/src/Core/Fnunez.VeterinaryClinic.Identity.Domain/Fnunez.VeterinaryClinic.Identity.Domain.csproj
+++ b/Identity/src/Core/Fnunez.VeterinaryClinic.Identity.Domain/Fnunez.VeterinaryClinic.Identity.Domain.csproj
@@ -5,5 +5,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-  
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.2" />
+  </ItemGroup>
+
 </Project>
