Add package reference Duende.IdentityServer version 6.2.3 into Identity.Infrastructure #23

--- a/Identity/src/Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure.csproj
+++ b/Identity/src/Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\..\Core\Fnunez.VeterinaryClinic.Identity.Application\Fnunez.VeterinaryClinic.Identity.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Duende.IdentityServer" Version="6.2.3" />
+  </ItemGroup>
+
 </Project>
