--- a/Identity/src/Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure.csproj
+++ b/Identity/src/Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Duende.IdentityServer" Version="6.2.3" />
+    <PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.2.3" />
   </ItemGroup>
 
 </Project>
