Add package reference Duende.IdentityServer.EntityFramework version 6.2.3 into Identity.Infrastructure #23

--- a/Identity/src/Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure.csproj
+++ b/Identity/src/Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Duende.IdentityServer" Version="6.2.3" />
     <PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.2.3" />
+    <PackageReference Include="Duende.IdentityServer.EntityFramework" Version="6.2.3" />
   </ItemGroup>
 
 </Project>
