--- a/Identity/src/Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure.csproj
+++ b/Identity/src/Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Duende.IdentityServer" Version="6.2.3" />
     <PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.2.3" />
     <PackageReference Include="Duende.IdentityServer.EntityFramework" Version="6.2.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.2" />
   </ItemGroup>
 
 </Project>
