Add package reference Microsoft.EntityFrameworkCore.InMemory version 7.0.2 into Identity.Infrastructure #23

--- a/Identity/src/Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure.csproj
+++ b/Identity/src/Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure/Fnunez.VeterinaryClinic.Identity.Infrastructure.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Duende.IdentityServer.EntityFramework" Version="6.2.3" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.2" />
   </ItemGroup>
 
 </Project>
