--- a/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/Fnunez.VeterinaryClinic.Identity.Api.csproj
+++ b/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/Fnunez.VeterinaryClinic.Identity.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Duende.IdentityServer" Version="6.2.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
