--- a/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/Fnunez.VeterinaryClinic.Identity.Api.csproj
+++ b/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/Fnunez.VeterinaryClinic.Identity.Api.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Duende.IdentityServer" Version="6.2.3" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
