--- a/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/Fnunez.VeterinaryClinic.Identity.Api.csproj
+++ b/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/Fnunez.VeterinaryClinic.Identity.Api.csproj
@@ -9,6 +9,10 @@
   <ItemGroup>
     <PackageReference Include="Duende.IdentityServer" Version="6.2.3" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
