Add package reference Microsoft.AspNetCore.Authentication.JwtBearer version 7.0.2 into ClinicManagement.Api #23

--- a/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/Fnunez.VeterinaryClinic.ClinicManagement.Api.csproj
+++ b/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/Fnunez.VeterinaryClinic.ClinicManagement.Api.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Duende.BFF" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.2" />
