Authentication settings into appsettings in ClinicManagement.Api #23

--- a/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/appsettings.Development.json
@@ -10,6 +10,12 @@
   "RabbitMqSetting": {
     "HostAddress": "amqp://guest:guest@127.0.0.1:5672/"
   },
+  "AuthenticationSetting": {
+    "Audience": "7e2593ba-e3cd-40e5-a50e-506877d0210e",
+    "Authority": "https://localhost:7066",
+    "DefaultScheme": "Bearer",
+    "ValidateAudience": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
