Authorization settings into appsettings in ClinicManagement.Api #23

--- a/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/appsettings.Development.json
@@ -16,6 +16,22 @@
     "DefaultScheme": "Bearer",
     "ValidateAudience": true
   },
+  "AuthorizationSetting": {
+    "Policies": [
+      {
+        "Name": "ApiScope",
+        "RequireAuthenticatedUser": true,
+        "RequiredClaims": [
+          {
+            "ClaimType": "scope",
+            "Values": [
+              "clinic_management_api"
+            ]
+          }
+        ]
+      }
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
