--- a/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/appsettings.Development.json
@@ -32,6 +32,10 @@
       }
     ]
   },
+  "CorsPolicySetting": {
+    "BlazorServerUrl": "https://localhost:7004",
+    "IdentityServerUrl": "https://localhost:7066"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
