--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/appsettings.Development.json
@@ -1,5 +1,12 @@
 {
   "ApiUrl": "https://localhost:7229/api/",
+  "ApplicationUrl": "https://localhost:7004",
+  "BackendForFrontendSetting": {
+    "LocalEndpointToRouteRemoteApiByReverseProxy": "api",
+    "SecondsToCheckAuthenticationStateDuetime": 1,
+    "SecondsToCheckAuthenticationStatePeriod": 60,
+    "SecondsToRefreshUserCache": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
