--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server.csproj
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Duende.BFF" Version="2.0.0" />
+    <PackageReference Include="Duende.BFF.Yarp" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.2" />
   </ItemGroup>
 
