Add Cookie settings into appsettings in ClinicManagement.BlazorClient.Server #23

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
@@ -4,6 +4,12 @@
     "DefaultScheme": "cookie",
     "DefaultSignOutScheme": "oidc"
   },
+  "CookieSetting": {
+    "AuthenticationScheme": "cookie",
+    "ExpireTimeInMinutes": 15,
+    "Name": "__Host-blazor",
+    "SameSiteMode": "Strict"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
