Add OpenIdConnection settings into appsettings in ClinicManagement.BlazorClient.Server #23

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
@@ -10,6 +10,31 @@
     "Name": "__Host-blazor",
     "SameSiteMode": "Strict"
   },
+  "OpenIdConnectSetting": {
+    "AuthenticationScheme": "oidc",
+    "Authority": "https://localhost:7066",
+    "ClaimActionsToMap": [
+      "preferred_username",
+      "role"
+    ],
+    "ClientId": "6c4c5801-1089-4c3c-83c7-ddc0eb3707b3",
+    "ClientSecret": "secret",
+    "EnabledGetClaimsFromUserInfoEndpoint": true,
+    "EnabledMapInboundClaims": false,
+    "EnabledSaveTokens": true,
+    "EnabledUsePkce": true,
+    "ResponseMode": "query",
+    "ResponseType": "code",
+    "Scopes": [
+      "clinic_management_api",
+      "email",
+      "offline_access",
+      "openid",
+      "preferred_username",
+      "profile",
+      "roles"
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
