Add ReverseProxy settings into appsettings in ClinicManagement.BlazorClient.Server #23

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
@@ -35,6 +35,28 @@
       "roles"
     ]
   },
+  "ReverseProxy": {
+    "Routes": {
+      "ClinicManagementApiRoute": {
+        "ClusterId": "ClinicManagementApiCluster",
+        "Match": {
+          "Path": "/api/{**catch-all}"
+        },
+        "Metadata": {
+          "Duende.Bff.Yarp.TokenType": "User"
+        }
+      }
+    },
+    "Clusters": {
+      "ClinicManagementApiCluster": {
+        "Destinations": {
+          "ClinicManagementApiDestination": {
+            "Address": "https://localhost:7229"
+          }
+        }
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
