Add AccessDeniedPath into OpenIdConnectSettings in ClinicManagement.BlazorClient.Server #23

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
@@ -11,6 +11,7 @@
     "SameSiteMode": "Strict"
   },
   "OpenIdConnectSetting": {
+    "AccessDeniedPath": "/login",
     "AuthenticationScheme": "oidc",
     "Authority": "https://localhost:7066",
     "ClaimActionsToMap": [
