Add required policies into appsettings files in ClinicManagement.Api #23

--- a/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/appsettings.Development.json
@@ -27,6 +27,38 @@
               "clinic_management_api"
             ]
           }
+        ],
+        "RequiredRoles": []
+      },
+      {
+        "Name": "RequiredReaderPolicy",
+        "RequireAuthenticatedUser": true,
+        "RequiredClaims": [
+          {
+            "ClaimType": "scope",
+            "Values": [
+              "clinic_management_api"
+            ]
+          }
+        ],
+        "RequiredRoles": [
+          "Manager",
+          "Staff"
+        ]
+      },
+      {
+        "Name": "RequiredWriterPolicy",
+        "RequireAuthenticatedUser": true,
+        "RequiredClaims": [
+          {
+            "ClaimType": "scope",
+            "Values": [
+              "clinic_management_api"
+            ]
+          }
+        ],
+        "RequiredRoles": [
+          "Manager"
         ]
       }
     ]
