Update appsettings file in Scheduling.Api #23

--- a/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/appsettings.Development.json
+++ b/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/appsettings.Development.json
@@ -1,5 +1,4 @@
 {
-  "BlazorClientUrl": "https://localhost:7154",
   "UseInMemoryDatabase": false,
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=Scheduling;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True"
@@ -9,6 +8,64 @@
   },
   "RabbitMqSetting": {
     "HostAddress": "amqp://guest:guest@127.0.0.1:5672/"
+  },
+  "AuthenticationSetting": {
+    "Audience": "87fd9858-661d-409e-810b-86055039bcce",
+    "Authority": "https://localhost:7066",
+    "DefaultScheme": "Bearer",
+    "ValidateAudience": true
+  },
+  "AuthorizationSetting": {
+    "Policies": [
+      {
+        "Name": "ApiScope",
+        "RequireAuthenticatedUser": true,
+        "RequiredClaims": [
+          {
+            "ClaimType": "scope",
+            "Values": [
+              "scheduling_api"
+            ]
+          }
+        ],
+        "RequiredRoles": []
+      },
+      {
+        "Name": "RequiredReaderPolicy",
+        "RequireAuthenticatedUser": true,
+        "RequiredClaims": [
+          {
+            "ClaimType": "scope",
+            "Values": [
+              "scheduling_api"
+            ]
+          }
+        ],
+        "RequiredRoles": [
+          "Manager",
+          "Staff"
+        ]
+      },
+      {
+        "Name": "RequiredWriterPolicy",
+        "RequireAuthenticatedUser": true,
+        "RequiredClaims": [
+          {
+            "ClaimType": "scope",
+            "Values": [
+              "scheduling_api"
+            ]
+          }
+        ],
+        "RequiredRoles": [
+          "Manager"
+        ]
+      }
+    ]
+  },
+  "CorsPolicySetting": {
+    "BlazorServerUrl": "https://localhost:7154",
+    "IdentityServerUrl": "https://localhost:7066"
   },
   "Logging": {
     "LogLevel": {
