--- a/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/Fnunez.VeterinaryClinic.Scheduling.Api.csproj
+++ b/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/Fnunez.VeterinaryClinic.Scheduling.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.2" />
