--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/appsettings.Development.json
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/appsettings.Development.json
@@ -1,10 +1,10 @@
 {
-  "ApiUrl": "https://localhost:7266/api/",
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ApplicationUrl": "https://localhost:7154",
+  "BackendForFrontendSetting": {
+    "LocalEndpointToRouteRemoteApiByReverseProxy": "api",
+    "SecondsToCheckAuthenticationStateDuetime": 1,
+    "SecondsToCheckAuthenticationStatePeriod": 60,
+    "SecondsToRefreshUserCache": 60
   },
   "CookieSetting": {
     "UserSettingsKey": "userSettings"
