--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "AuthenticationSetting": {
+    "DefaultChallengeScheme": "oidc",
+    "DefaultScheme": "cookie",
+    "DefaultSignOutScheme": "oidc"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
