OpenIdConnect settings into appsettings in Scheduling.BlazorClient.Server #23

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
@@ -10,6 +10,32 @@
     "Name": "__Host-blazor",
     "SameSiteMode": "Strict"
   },
+  "OpenIdConnectSetting": {
+    "AccessDeniedPath": "/login",
+    "AuthenticationScheme": "oidc",
+    "Authority": "https://localhost:7066",
+    "ClaimActionsToMap": [
+      "preferred_username",
+      "role"
+    ],
+    "ClientId": "85064410-c9c8-4afa-9deb-cb4b8e5114df",
+    "ClientSecret": "secret",
+    "EnabledGetClaimsFromUserInfoEndpoint": true,
+    "EnabledMapInboundClaims": false,
+    "EnabledSaveTokens": true,
+    "EnabledUsePkce": true,
+    "ResponseMode": "query",
+    "ResponseType": "code",
+    "Scopes": [
+      "email",
+      "offline_access",
+      "openid",
+      "preferred_username",
+      "profile",
+      "roles",
+      "scheduling_api"
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
