ReverseProxy settings into appsettings in Scheduling.BlazorClient.Server #23

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
@@ -36,6 +36,28 @@
       "scheduling_api"
     ]
   },
+  "ReverseProxy": {
+    "Routes": {
+      "SchedulingApiRoute": {
+        "ClusterId": "SchedulingApiCluster",
+        "Match": {
+          "Path": "/api/{**catch-all}"
+        },
+        "Metadata": {
+          "Duende.Bff.Yarp.TokenType": "User"
+        }
+      }
+    },
+    "Clusters": {
+      "SchedulingApiCluster": {
+        "Destinations": {
+          "SchedulingApiDestination": {
+            "Address": "https://localhost:7266"
+          }
+        }
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
