Add antiforgery on reverse proxy in ClinicManagement.BlazorClient.Server #23

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
@@ -44,6 +44,7 @@
           "Path": "/api/{**catch-all}"
         },
         "Metadata": {
+          "Duende.Bff.Yarp.AntiforgeryCheck": "true",
           "Duende.Bff.Yarp.TokenType": "User"
         }
       }
