--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
@@ -44,6 +44,7 @@
           "Path": "/api/{**catch-all}"
         },
         "Metadata": {
+          "Duende.Bff.Yarp.AntiforgeryCheck": "true",
           "Duende.Bff.Yarp.TokenType": "User"
         }
       }
