EnabledSlidingExpiration into CookieSetting in ClinicManagement.BlazorClient.Server #23

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
@@ -6,6 +6,7 @@
   },
   "CookieSetting": {
     "AuthenticationScheme": "cookie",
+    "EnabledSlidingExpiration": true,
     "ExpireTimeInMinutes": 15,
     "Name": "__Host-blazor",
     "SameSiteMode": "Strict"
