--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
@@ -6,6 +6,7 @@
   },
   "CookieSetting": {
     "AuthenticationScheme": "cookie",
+    "EnabledSlidingExpiration": true,
     "ExpireTimeInMinutes": 15,
     "Name": "__Host-blazor",
     "SameSiteMode": "Strict"
