Set Cookie's name for session state in ClinicManagement.BlazorClient.Server #23

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
@@ -8,7 +8,7 @@
     "AuthenticationScheme": "cookie",
     "EnabledSlidingExpiration": true,
     "ExpireTimeInMinutes": 15,
-    "Name": "__Host-blazor",
+    "Name": "clinic-management-blazor",
     "SameSiteMode": "Strict"
   },
   "OpenIdConnectSetting": {
