Set Cookie's name for session state in Scheduling.BlazorClient.Server #23

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
@@ -8,7 +8,7 @@
     "AuthenticationScheme": "cookie",
     "EnabledSlidingExpiration": true,
     "ExpireTimeInMinutes": 15,
-    "Name": "__Host-blazor",
+    "Name": "scheduling-blazor",
     "SameSiteMode": "Strict"
   },
   "OpenIdConnectSetting": {
