--- a/ClinicManagementNotification/src/Core/Fnunez.VeterinaryClinic.ClinicManagementNotification.Domain/Fnunez.VeterinaryClinic.ClinicManagementNotification.Domain.csproj
+++ b/ClinicManagementNotification/src/Core/Fnunez.VeterinaryClinic.ClinicManagementNotification.Domain/Fnunez.VeterinaryClinic.ClinicManagementNotification.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Fnunez.VeterinaryClinic.SharedKernel.Domain" Version="1.3.1" />
+  </ItemGroup>
+
 </Project>
