--- a/ClinicManagementNotification/src/Core/Fnunez.VeterinaryClinic.ClinicManagementNotification.Application/Fnunez.VeterinaryClinic.ClinicManagementNotification.Application.csproj
+++ b/ClinicManagementNotification/src/Core/Fnunez.VeterinaryClinic.ClinicManagementNotification.Application/Fnunez.VeterinaryClinic.ClinicManagementNotification.Application.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\Fnunez.VeterinaryClinic.ClinicManagementNotification.Domain\Fnunez.VeterinaryClinic.ClinicManagementNotification.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Fnunez.VeterinaryClinic.SharedKernel.Application" Version="1.3.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
