Add package reference SharedKernel.Infrastructure version 1.3.1 in ClinicManagementNotification.Infrastructure #25

--- a/ClinicManagementNotification/src/Infrastructure/Fnunez.VeterinaryClinic.ClinicManagementNotification.Infrastructure/Fnunez.VeterinaryClinic.ClinicManagementNotification.Infrastructure.csproj
+++ b/ClinicManagementNotification/src/Infrastructure/Fnunez.VeterinaryClinic.ClinicManagementNotification.Infrastructure/Fnunez.VeterinaryClinic.ClinicManagementNotification.Infrastructure.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\..\Core\Fnunez.VeterinaryClinic.ClinicManagementNotification.Application\Fnunez.VeterinaryClinic.ClinicManagementNotification.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Fnunez.VeterinaryClinic.SharedKernel.Infrastructure" Version="1.3.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
