--- a/ClinicManagementN/src/Core/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Application/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Application.csproj
+++ b/ClinicManagementN/src/Core/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Application/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.1" />
     <PackageReference Include="Fnunez.VeterinaryClinic.SharedKernel.Application" Version="1.3.2" />
   </ItemGroup>
 
