--- a/ClinicManagementN/src/Core/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Application/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Application.csproj
+++ b/ClinicManagementN/src/Core/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Application/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Application.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.1" />
     <PackageReference Include="Fnunez.VeterinaryClinic.SharedKernel.Application" Version="1.3.2" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
   </ItemGroup>
 
   <PropertyGroup>
