--- a/ClinicManagementN/src/Infrastructure/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Infrastructure/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Infrastructure.csproj
+++ b/ClinicManagementN/src/Infrastructure/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Infrastructure/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Infrastructure.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Fnunez.VeterinaryClinic.SharedKernel.Infrastructure" Version="1.3.2" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.13" />
   </ItemGroup>
 
   <PropertyGroup>
