Add CorsPolicySetting into appsettings in ClinicManagementNotifications.Api #25

--- a/ClinicManagementN/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Api/appsettings.Development.json
+++ b/ClinicManagementN/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Api/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "CorsPolicySetting": {
+    "BlazorServerUrl": "https://localhost:7004",
+    "IdentityServerUrl": "https://localhost:7066"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
