Add database connection string into appsettings in ClinicManagementNotifications.Api #25

--- a/ClinicManagementN/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Api/appsettings.Development.json
+++ b/ClinicManagementN/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Api/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "UseInMemoryDatabase": false,
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=ClinicManagementNotifications;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True"
+  },
   "CorsPolicySetting": {
     "BlazorServerUrl": "https://localhost:7004",
     "IdentityServerUrl": "https://localhost:7066"
