Authentication in ClinicManagementNotifications.Api #25

--- a/ClinicManagementN/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Api/appsettings.Development.json
+++ b/ClinicManagementN/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Api/appsettings.Development.json
@@ -3,6 +3,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=ClinicManagementNotifications;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True"
   },
+  "AuthenticationSetting": {
+    "Audience": "09cb5cff-f1fa-4f5f-aa26-d39f9b63b0d6",
+    "Authority": "https://localhost:7066",
+    "DefaultScheme": "Bearer",
+    "ValidateAudience": true
+  },
   "CorsPolicySetting": {
     "BlazorServerUrl": "https://localhost:7004",
     "IdentityServerUrl": "https://localhost:7066"
