Authorization in ClinicManagementNotifications.Api #25

--- a/ClinicManagementN/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Api/appsettings.Development.json
+++ b/ClinicManagementN/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Api/appsettings.Development.json
@@ -9,6 +9,23 @@
     "DefaultScheme": "Bearer",
     "ValidateAudience": true
   },
+  "AuthorizationSetting": {
+    "Policies": [
+      {
+        "Name": "ApiScope",
+        "RequireAuthenticatedUser": true,
+        "RequiredClaims": [
+          {
+            "ClaimType": "scope",
+            "Values": [
+              "clinic_management_notifications_api"
+            ]
+          }
+        ],
+        "RequiredRoles": []
+      }
+    ]
+  },
   "CorsPolicySetting": {
     "BlazorServerUrl": "https://localhost:7004",
     "IdentityServerUrl": "https://localhost:7066"
