CorsPolicySetting in ClinicManagement.BlazorClient.Server #25

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
@@ -11,6 +11,11 @@
     "Name": "clinic-management-blazor",
     "SameSiteMode": "Strict"
   },
+  "CorsPolicySetting": {
+    "ClinicManagementApiUrl": "https://localhost:7229",
+    "ClinicManagementNotificationsApiUrl": "https://localhost:7082",
+    "IdentityServerUrl": "https://localhost:7066"
+  },
   "OpenIdConnectSetting": {
     "AccessDeniedPath": "/login",
     "AuthenticationScheme": "oidc",
