Add required authorization scope for notifications api in ClinicManagement.BlazorClient.Server #25

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
@@ -34,6 +34,7 @@
     "ResponseType": "code",
     "Scopes": [
       "clinic_management_api",
+      "clinic_management_notifications_api",
       "email",
       "offline_access",
       "openid",
