Implement configure YARP to reverse map each isolated api in ClinicManagement.BlazorClient.Server #25

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
@@ -48,8 +48,28 @@
       "ClinicManagementApiRoute": {
         "ClusterId": "ClinicManagementApiCluster",
         "Match": {
-          "Path": "/api/{**catch-all}"
+          "Path": "/cma/{**catch-all}"
         },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/cma"
+          }
+        ],
+        "Metadata": {
+          "Duende.Bff.Yarp.AntiforgeryCheck": "true",
+          "Duende.Bff.Yarp.TokenType": "User"
+        }
+      },
+      "ClinicManagementNotificationsApiRoute": {
+        "ClusterId": "ClinicManagementNotificationsApiCluster",
+        "Match": {
+          "Path": "/cmna/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/cmna"
+          }
+        ],
         "Metadata": {
           "Duende.Bff.Yarp.AntiforgeryCheck": "true",
           "Duende.Bff.Yarp.TokenType": "User"
@@ -60,7 +80,14 @@
       "ClinicManagementApiCluster": {
         "Destinations": {
           "ClinicManagementApiDestination": {
-            "Address": "https://localhost:7229"
+            "Address": "https://localhost:7229/api"
+          }
+        }
+      },
+      "ClinicManagementNotificationsApiCluster": {
+        "Destinations": {
+          "ClinicManagementApiDestination": {
+            "Address": "https://localhost:7082/api"
           }
         }
       }
