Add suffix route for api into BackendForFrontendSetting in ClinicManagement.BlazorClient.Client #25

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/appsettings.Development.json
@@ -7,10 +7,11 @@
   },
   "ApplicationUrl": "https://localhost:7004",
   "BackendForFrontendSetting": {
-    "LocalEndpointToRouteRemoteApiByReverseProxy": "api",
     "SecondsToCheckAuthenticationStateDuetime": 1,
     "SecondsToCheckAuthenticationStatePeriod": 60,
-    "SecondsToRefreshUserCache": 60
+    "SecondsToRefreshUserCache": 60,
+    "SuffixRouteForClinicManagementApi": "cma",
+    "SuffixRouteForClinicManagementNotificationsApi": "cmna"
   },
   "CookieSetting": {
     "UserSettingsKey": "userSettings"
