Add ReverseProxyForNotificationHubSignalr into appsettings in ClinicManagement.BlazorClient.Server #25

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
@@ -93,6 +93,30 @@
       }
     }
   },
+  "ReverseProxyForNotificationHubSignalr": {
+    "Routes": {
+      "ClinicManagementNotificationsApiNotificationHubRoute": {
+        "ClusterId": "ClinicManagementNotificationHubCluster",
+        "Match": {
+          "Path": "/notificationhub/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/notificationhub"
+          }
+        ]
+      }
+    },
+    "Clusters": {
+      "ClinicManagementNotificationHubCluster": {
+        "Destinations": {
+          "ClinicManagementApiDestination": {
+            "Address": "https://localhost:7082/notificationhub"
+          }
+        }
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
