Add ClinicManagementAccessToken ReverseProxy settings into appsettings in ClinicManagement.BlazorClient.Server #25

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
@@ -45,6 +45,21 @@
   },
   "ReverseProxy": {
     "Routes": {
+      "ClinicManagementAccessToken": {
+        "ClusterId": "ClinicManagementAccessTokenCluster",
+        "Match": {
+          "Path": "/cmat/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/cmat"
+          }
+        ],
+        "Metadata": {
+          "Duende.Bff.Yarp.AntiforgeryCheck": "true",
+          "Duende.Bff.Yarp.TokenType": "User"
+        }
+      },
       "ClinicManagementApiRoute": {
         "ClusterId": "ClinicManagementApiCluster",
         "Match": {
@@ -77,6 +92,13 @@
       }
     },
     "Clusters": {
+      "ClinicManagementAccessTokenCluster": {
+        "Destinations": {
+          "ClinicManagementApiDestination": {
+            "Address": "https://localhost:7004/api"
+          }
+        }
+      },
       "ClinicManagementApiCluster": {
         "Destinations": {
           "ClinicManagementApiDestination": {
