AuthenticationSetting into appsettings in SchedulingNotifications.Api #25

--- a/SchedulingN/src/Presentation/Fnunez.VeterinaryClinic.SchedulingNotifications.Api/appsettings.Development.json
+++ b/SchedulingN/src/Presentation/Fnunez.VeterinaryClinic.SchedulingNotifications.Api/appsettings.Development.json
@@ -3,6 +3,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=SchedulingNotifications;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True"
   },
+  "AuthenticationSetting": {
+    "Audience": "407acbe0-3063-427a-8501-770640d9913f",
+    "Authority": "https://localhost:7066",
+    "DefaultScheme": "Bearer",
+    "ValidateAudience": true
+  },
   "RabbitMqSetting": {
     "HostAddress": "amqp://guest:guest@127.0.0.1:5672/"
   },
