AuthorizationSetting into appsettings in SchedulingNotifications.Api #25

--- a/SchedulingN/src/Presentation/Fnunez.VeterinaryClinic.SchedulingNotifications.Api/appsettings.Development.json
+++ b/SchedulingN/src/Presentation/Fnunez.VeterinaryClinic.SchedulingNotifications.Api/appsettings.Development.json
@@ -9,6 +9,23 @@
     "DefaultScheme": "Bearer",
     "ValidateAudience": true
   },
+  "AuthorizationSetting": {
+    "Policies": [
+      {
+        "Name": "ApiScope",
+        "RequireAuthenticatedUser": true,
+        "RequiredClaims": [
+          {
+            "ClaimType": "scope",
+            "Values": [
+              "scheduling_notifications_api"
+            ]
+          }
+        ],
+        "RequiredRoles": []
+      }
+    ]
+  },
   "RabbitMqSetting": {
     "HostAddress": "amqp://guest:guest@127.0.0.1:5672/"
   },
