CorsPolicySetting into appsettings in SchedulingNotifications.Api #25

--- a/SchedulingN/src/Presentation/Fnunez.VeterinaryClinic.SchedulingNotifications.Api/appsettings.Development.json
+++ b/SchedulingN/src/Presentation/Fnunez.VeterinaryClinic.SchedulingNotifications.Api/appsettings.Development.json
@@ -26,6 +26,10 @@
       }
     ]
   },
+  "CorsPolicySetting": {
+    "BlazorServerUrl": "https://localhost:7154",
+    "IdentityServerUrl": "https://localhost:7066"
+  },
   "RabbitMqSetting": {
     "HostAddress": "amqp://guest:guest@127.0.0.1:5672/"
   },
