CorsPolicySetting in Scheduling.BlazorClient.Server #25

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
@@ -11,6 +11,11 @@
     "Name": "scheduling-blazor",
     "SameSiteMode": "Strict"
   },
+  "CorsPolicySetting": {
+    "IdentityServerUrl": "https://localhost:7066",
+    "SchedulingApiUrl": "https://localhost:7266",
+    "SchedulingNotificationsApiUrl": "https://localhost:7183"
+  },
   "OpenIdConnectSetting": {
     "AccessDeniedPath": "/login",
     "AuthenticationScheme": "oidc",
