Add scheduling_notifications_api scope for OpenIdConnect into appsettings in Scheduling.BlazorClient.Server #25

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
@@ -39,7 +39,8 @@
       "preferred_username",
       "profile",
       "roles",
-      "scheduling_api"
+      "scheduling_api",
+      "scheduling_notifications_api"
     ]
   },
   "ReverseProxy": {
